5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1671_1100.log
== TEST (2019-04-24 15:38:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada:" cedula)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada:" cedula)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garça")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onça-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:39:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.125876
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:40:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
	elif(cedula==5):
		print("Animal: Garca")
	elif(cedula==10):
		print("Animal: Arara")
	elif(cedula==20):
		print("Animal: Mico-leao-dourado")
	elif(cedula==50):
		print("Animal: Onca-pintada")
	elif(cedula==100):
		print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- ERROR:
File "XXXX", line 8
    elif(cedula==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:40:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
	elif(cedula==5):
		print("Animal: Garca")
	elif(cedula==10):
		print("Animal: Arara")
	elif(cedula==20):
		print("Animal: Mico-leao-dourado")
	elif(cedula==50):
		print("Animal: Onca-pintada")
	elif(cedula==100):
		print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- ERROR:
File "XXXX", line 8
    elif(cedula==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:41:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.173533
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input())
print("Entrada:" ,cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.13
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:53:12) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:" cedula)
-- ERROR:
File "XXXX", line 2
    print("Entrada:" cedula)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:53:18) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:54:11) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
-- OUTPUT:
Entrada: 100
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:55:17) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
	elif:
		print("Garça")
		elif:
			print("Arara")
-- ERROR:
File "XXXX", line 5
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:56:22) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
elif(cedula):
	print("Garça")
elif(cedula):
	print("Arara")
-- OUTPUT:
Entrada: 100
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:56:25) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
elif(cedula):
	print("Garça")
elif(cedula):
	print("Arara")
-- OUTPUT:
Entrada: 100
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:56:28) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
elif(cedula):
	print("Garça")
elif(cedula):
	print("Arara")
-- OUTPUT:
Entrada: 100
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:56:43) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Tartaruga")
elif(cedula):
	print("Garça")
elif(cedula):
	print("Arara")
-- OUTPUT:
Entrada: 100
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:57:30) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Animal: Tartaruga")
elif(cedula):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:57:33) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Animal: Tartaruga")
elif(cedula):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:57:35) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula):
	print("Animal: Tartaruga")
elif(cedula):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:36) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Garca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:41) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Garca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:45) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Arara
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:49) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
Animal: Arara
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:58) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:00:16) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:00:19) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:00:23) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:00:29) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:00:37) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:01:31) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:01:36) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:01:39) 
-- CODE:
cedula=int(input("valor de uma cedula:"))
print("Entrada:", cedula)
if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.180446
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
